# shorten-url

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/shorten_url/: __init__.py  extensions.py  models.py
src/shorten_url/blueprints/: __init__.py  main_routes.py
src/shorten_url/database/: __init__.py  database.py  models.py
tests/: conftest.py  test_temp.py
