[project]
name = "shorten-url"
version = "0.0.1"
description = "A URL shortening service"
maintainers = [
    {name = "Will Skaggs", email = "skaggswill1@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
pythonpath = ["src", "instance"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true
files = ["src", "tests"]
